whitespace problem solved

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,12 @@
 	--paragraph: #534C64;
 }
 
+html,
+body{
+	width: 100%;
+	overflow-x: hidden;
+}
+
 *{
 	margin: 0;
 	padding: 0;
